Use relative url to image

--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -67,7 +67,7 @@
 
   &__preview {
     position: relative;
-    background:url("/assets/images/editor-bg.png") black 0 0;
+    background:url("../../assets/images/editor-bg.png") black 0 0;
 
     &__scaffolder {
       margin:20px;
