--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -30,7 +30,7 @@
       margin-left:50%;
     }
 
-    .scaffolder__iframe:first-child {
+    .scaffolder__iframe--first {
       margin:0;
       position:absolute;
       left:0;
@@ -43,7 +43,7 @@
       margin-right:50%;
     }
 
-    .scaffolder__iframe:last-child {
+    .scaffolder__iframe--last {
       margin:0;
       position:absolute;
       right:0;
