--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -92,14 +92,15 @@
           </div>
         </div>
       </div>
-      <div class="text-muted small editor__credits">
+      <div class="text-muted small editor__credits hidden-xs hidden-sm">
         <div class="media">
           <a class="media-left media-middle" href="http://twitter.com/pirhoo" target="_blank">
             <img src="https://secure.gravatar.com/avatar/f514016d15f3d5409177c1031eedb0a5?s=32" class="img-circle img-thumbnail" />
           </a>
           <div class="media-body">
-            Hi, I'm <a href="http://twitter.com/pirhoo" target="_blank">@pirhoo</a>.<br />
-            This is an <a href="http://github.com/pirhoo/iframe-scaffolder/">open source</a> tool.
+            Hi, I'm <a href="http://twitter.com/pirhoo" target="_blank">@pirhoo</a>.
+            &nbsp;You can fork this tool<br />or report an issue
+            &nbsp;<a href="http://github.com/pirhoo/iframe-scaffolder/">on Github</a>!
           </div>
         </div>
       </div>
