Color active button

--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -84,6 +84,10 @@
       display:inline-block;
       width:65px;
     }
+
+    .btn.active {
+      color:@brand-primary;
+    }
   }
 
   &__preview {
