--- a/src/app/bootstrap.variables.less
+++ b/src/app/bootstrap.variables.less
@@ -198,7 +198,7 @@
 @input-border-radius-small:      @border-radius-small;
 
 //** Border color for inputs on focus
-@input-border-focus:             #66afe9;
+@input-border-focus:             #e5cf73;
 
 //** Placeholder text color
 @input-color-placeholder:        #999;
