--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -30,7 +30,7 @@
                   <i class="glyphicon glyphicon-trash"></i>
                 </button>
               </div>
-              <a ng-href="{{scaffolder.url($index)}}" target="_blank" class="editor__step__url__value">
+              <a ng-href="{{scaffolder.url($index, true)}}" target="_blank" class="editor__step__url__value">
                 {{scaffolder.label($index)}}
               </a>
             </div>
