--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -13,7 +13,7 @@
           <div class="input-group">
             <input type="url" required ng-model="newUrl" class="form-control" placeholder="An URL to use as new iframe" />
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="submit">
+              <button class="btn btn-primary" type="submit" tooltip="Create an iframe with this URL">
                 Add
               </button>
             </span>
