--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -21,6 +21,10 @@
     position:relative;
     counter-increment:step;
 
+    &--disable {
+      opacity:0.2;
+    }
+
     &__label {
       position:absolute;
       bottom:0;
