--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -23,6 +23,14 @@
 
     &--disable {
       opacity:0.2;
+      &:after {
+        position:absolute;
+        content:"";
+        top:0;
+        left:0;
+        bottom:0;
+        right:0;
+      }
     }
 
     &__label {
