--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -110,7 +110,7 @@
         <div class="editor__preview__empty-alert" ng-hide="urls.length">
           <div class="lead editor__preview__empty-alert__message">
             <p>
-              Add your iframe's URL on the <span class="hidden-sm hidden-xs">left&nbsp;</span>panel to preview the mosaic here.
+              Add an iframe's URL on the <span class="hidden-sm hidden-xs">left&nbsp;</span>panel to preview the mosaic here.
             </p>
             <p>
               <a ng-click="pickExample()" class="btn btn-link" ng-show="examples.length">
