Simplified style building

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -2,4 +2,4 @@
 // Internal
 @import "main/main.less";
 @import "view/view.less";
-@import "../components/scaffolder/scaffolder.less";
+@import "scaffolder/scaffolder.less";
