--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="introduction">
   <div class="container">
     <h2>Iframe Scaffolder</h2>
-    <p class="lead text-muted">This tool helps you to quickly build a mosaic of iframes.</p>
+    <p class="lead text-muted">This tool helps you to quickly arrange several iframes together.</p>
   </div>
 </div>
 <div class="container">
