--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -34,7 +34,7 @@
                 {{scaffolder.label($index)}}
               </a>
             </div>
-            <form ng-submit="saveLabel($index)" ng-show="labels[$index] || labels[$index] === ''" class="editor__step__url__edit-label">
+            <form ng-submit="saveLabel($index)" ng-show="!!labels[$index] || labels[$index] === ''" class="editor__step__url__edit-label">
               <div class="input-group input-group-sm">
                 <input type="text" ng-model="labels[$index]" class="form-control" />
                 <span class="input-group-btn">
