--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -51,6 +51,10 @@
       }
     }
 
+    &__error {
+      margin-top:5px;
+    }
+
     &__url {
       white-space: nowrap;
       overflow: hidden;
