--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -58,6 +58,7 @@
     &__url {
       white-space: nowrap;
       overflow: hidden;
+      cursor: move;
       position: relative;
 
       &__actions {
@@ -71,7 +72,7 @@
         position:relative;
         z-index: 10;
         display: inline-block;
-        width:100%;
+        max-width:100%;
         overflow: hidden;
       }
 
