Added narrative layout

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -64,6 +64,9 @@
             <button class="btn btn-default" ng-class="{active: $parent.layout == 'menu'}" ng-click="$parent.layout = 'menu'" tooltip="Toggle iframes using a menu">
               ≡◻
             </button>
+            <button class="btn btn-default" ng-class="{active: $parent.layout == 'narrative'}" ng-click="$parent.layout = 'narrative'" tooltip="Toggle iframes using next and previous buttons">
+              ⍃ ⍄
+            </button>
             <button class="btn btn-default" ng-class="{active: $parent.layout == 'tabs'}" ng-click="$parent.layout = 'tabs'" tooltip="Toggle iframes using tabs">
               ⎍⎍
             </button>
