--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -95,12 +95,18 @@
           <p>
             <textarea class="form-control" readonly>{{getViewIframe()}}</textarea>
           </p>
-          <div class="text-muted">
-            <div class="pull-left">Change the size&nbsp;</div>
-            <div class="text-right">
-              <input type="number" ng-model="width" min="50" class="form-control input-sm editor__step__size" />
+          <div class="">
+            <div class="pull-left editor__step__iframe-label">
+              <strong>Change the size&nbsp;</strong><br />
+              <label class="editor__step__iframe-label__fluid">
+                <input type="checkbox" ng-model="useFluid" />
+                Use a fluid width
+              </label>
+            </div>
+            <div class="text-right editor__step__iframe-size">
+              <input type="number" ng-disabled="useFluid" ng-model="width" min="50" class="form-control input-sm editor__step__iframe-size__size" />
               x
-              <input type="number" ng-model="height" min="50" class="form-control input-sm editor__step__size" />
+              <input type="number" ng-model="height" min="50" class="form-control input-sm editor__step__iframe-size__size" />
             </div>
           </div>
         </div>
