--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -94,9 +94,29 @@
       left:0;
     }
 
-    & &__size {
-      display:inline-block;
-      width:65px;
+    &__iframe-label {
+      font-weight:bold;
+
+      &__fluid {
+        font-weight:normal;
+        font-size:0.8em;
+
+        input {
+          position:relative;
+          top:2px;
+          margin-right:2px;
+        }
+      }
+    }
+
+    &__iframe-size {
+
+      padding-top:5px;
+
+      & &__size {
+        display:inline-block;
+        width:65px;
+      }
     }
 
     .btn.active {
