Move narrative arrows

--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -86,7 +86,7 @@
       position:relative;
       a:after, a:before {
         position: absolute;
-        top:50%;
+        top:45%;
         .translate(0, -50%);
       }
     }
@@ -94,15 +94,15 @@
     .pull-left a {
       padding-left:25px;
       &:before {
-        content:"◄";
-        left:5px;
+        content:"◂";
+        left:10px;
       }
     }
     .pull-right a {
       padding-right:25px;
       &:after {
-        content:"►";
-        right:5px;
+        content:"▸";
+        right:10px;
       }
     }
   }
