--- a/src/components/scaffolder/scaffolder.html
+++ b/src/components/scaffolder/scaffolder.html
@@ -1,4 +1,4 @@
-<div class="scaffolder scaffolder--{{layout}}">
+<div class="scaffolder scaffolder--{{layout}} scaffolder--{{theme}}">
   <aside ng-show="scaffolder.hasMenu()" class="scaffolder__menu">
     <ul class="nav nav-pills" ng-class="{ 'nav-stacked': layout === 'menu' }">
       <li ng-repeat="url in urls track by $index"
