Added theme mixins and use

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -1,5 +1,8 @@
 @import "bootstrap.loader.less";
 // Internal
+@import "mixins.less";
 @import "main/main.less";
 @import "view/view.less";
 @import "scaffolder/scaffolder.less";
+
+a, a:hover { cursor:pointer }
