--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -109,6 +109,20 @@
       }
     }
 
+    & &__theme-preview {
+      opacity:1;
+    }
+
+    &__theme {
+      position:relative;
+
+      &__preview {
+        position:absolute;
+        top:3px;
+        right:5px;
+      }
+    }
+
     &__iframe-size {
 
       padding-top:5px;
