--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -5,7 +5,7 @@
   overflow: hidden;
 
   // Theming  overload
-
+  html body &--default { .scaffolder-theme(); }
   html body &--ebony-clay { .scaffolder-theme(#f0f3f5, @gray-dark, #22313F, white); }
   html body &--picton-blue { .scaffolder-theme(white, @gray-dark, #59ABE3, white); }
   html body &--silver-tree { .scaffolder-theme(white, @gray-dark, #68C3A3, white); }
