Added title color

--- a/src/app/mixins.less
+++ b/src/app/mixins.less
@@ -31,4 +31,8 @@
     color: @hover-color;
     background: @hover-bg;
   }
+
+  .scaffolder__title {
+    color:mix(@active-bg, @iframe-color);
+  }
 }
