--- a/src/components/scaffolder/scaffolder.less
+++ b/src/components/scaffolder/scaffolder.less
@@ -119,12 +119,13 @@
   &__title {
     display: none;
     position:absolute;
-    top:5px;
+    top:10px;
     left:50%;
     font-weight:bold;
-    line-height: 40px;
-    height: 40px;
+    line-height: 30px;
+    height: 30px;
     margin:0;
+    padding: 0 5px;
     .translate(-50%, 0);
   }
 
