Switcher to angular 1.3

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -109,7 +109,7 @@
         <div class="editor__step__label"></div>
         <div class="panel-body">
           <p>
-            <button class="btn btn-primary btn-xs pull-right" ui-zeroclip zeroclip-model="getViewIframe()" tooltip="Copy the embed code to you clipboard.">
+            <button class="btn btn-primary btn-xs pull-right" ui-zeroclip zeroclip-model="getViewIframe()" title="Copy the embed code to you clipboard.">
               Copy
             </button>
             Export the iframe
