--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="editor__preview__scaffolder">
-          <scaffolder urls="urls" layout="layout" theme="theme" />
+          <scaffolder urls="urls" iframe-layout="layout" theme="theme" />
         </div>
       </div>
     </div>
