--- a/src/app/view/view.html
+++ b/src/app/view/view.html
@@ -1,5 +1,5 @@
 <div class="view">
   <div class="view__scaffolder">
-    <scaffolder urls="urls" layout="layout" theme="theme" />
+    <scaffolder urls="urls" iframe-layout="layout" theme="theme" />
   </div>
 </div>
