Added missing include

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -4,5 +4,6 @@
 @import "main/main.less";
 @import "view/view.less";
 @import "scaffolder/scaffolder.less";
+@import "themes/themes.less";
 
 a, a:hover { cursor:pointer }
